--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,10 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Mang-la-Desh!
+email: info@mangladesh.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Wear Mang-la-Desh! Swim and Lounge Apparel and be in an excited state of mind always propelling forward with a never-ending passion for life!
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.mangladesh.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
