--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "http://www.mangladesh.com" # the base hostname & protocol for your site
 footer1: Mang-la-Desh! Swim and Lounge Apparel
 company: MANGLADESH L.L.C. 
 
-address: "515 West Avenue, Suite 553, Norwalk, C.T. 06850"
+address: "515 West Avenue, Suite 553 Norwalk, C.T. 06850"
 phone: 203-299-0697
 
 facebook: https://www.facebook.com/pages/Mang-la-desh/119404498409?ref=aymt_homepage_panel
